Update 'woiof1v60-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:bf42b706ff44b910e09ad8bcea23ddb0cabd403d@sha256:10dc9559a61e7e4507bbb18764c75d7f492c105fb07330e6a42a9e5de98b1e04

--- a/components/woiof1v60-python/overlays/development/deployment-patch.yaml
+++ b/components/woiof1v60-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: woiof1v60-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:bf42b706ff44b910e09ad8bcea23ddb0cabd403d@sha256:10dc9559a61e7e4507bbb18764c75d7f492c105fb07330e6a42a9e5de98b1e04
+          name: container-image
